src/objects/OrderApi__Item__c.object
<CustomObject>
    <description>Items store all products, services and funds an organization uses to generate revenue.</description>
    <fields>
        <fullName>AC_Event__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AC Event</label>
        <referenceTo>BR_Event__c</referenceTo>
        <relationshipLabel>Items</relationshipLabel>
        <relationshipName>Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Association_Journals_Type__c</fullName>
        <description>Classify association journals in Online only or Print. Originally created in UATF by Fonteva and recreated by JR.</description>
        <label>Association Journals Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Online Only</fullName>
                </value>
                <value>
                    <fullName>Print &amp; Online</fullName>
                </value>
                <value>
                    <fullName>Both</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Default_Selected_In_Join__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Default Selected In Join</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Eligible_Nominator_Membership__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Eligible Nominator Membership</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EventApi__Event__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Link to related Event.</description>
        <inlineHelpText>Link to related Event.</inlineHelpText>
        <label>Event</label>
        <referenceTo>EventApi__Event__c</referenceTo>
        <relationshipLabel>Items</relationshipLabel>
        <relationshipName>Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EventApi__Schedule_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>** System Calculated ** Link to Schedule Item (Circular Reference) do not manually update.</description>
        <inlineHelpText>** System Calculated ** Link to Schedule Item (Circular Reference) do not manually update.</inlineHelpText>
        <label>Schedule Item</label>
        <referenceTo>EventApi__Schedule_Item__c</referenceTo>
        <relationshipLabel>Items</relationshipLabel>
        <relationshipName>Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EventApi__Sponsor_Package__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>** System Calculated ** Link to the sponsor package that reflects the configurations of this Item.</description>
        <inlineHelpText>** System Calculated ** Link to the sponsor package that reflects the configurations of this Item.</inlineHelpText>
        <label>Sponsor Package</label>
        <referenceTo>EventApi__Sponsor_Package__c</referenceTo>
        <relationshipLabel>DO NOT DISPLAY</relationshipLabel>
        <relationshipName>Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EventApi__Ticket_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>** System Calculated ** Link to Ticket Type (Circular Reference) do not manually update.</description>
        <inlineHelpText>** System Calculated ** Link to Ticket Type (Circular Reference) do not manually update.</inlineHelpText>
        <label>Ticket Type</label>
        <referenceTo>EventApi__Ticket_Type__c</referenceTo>
        <relationshipLabel>DO NOT DISPLAY</relationshipLabel>
        <relationshipName>Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Fon_Association_Journal_Type__c</fullName>
        <description>Classify association journals in Online only or Print</description>
        <label>Association Journals Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Online Only</fullName>
                </value>
                <value>
                    <fullName>Print &amp; Online</fullName>
                </value>
                <value>
                    <fullName>Both</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Fon_Display_Name_On_Renewal__c</fullName>
        <description>Journals name need to display on renewal VF page</description>
        <label>Display Name On Renewal</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Future_Income_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>GL account for purchases made in the current year that apply to next year</description>
        <label>Future Income Account</label>
        <referenceTo>OrderApi__GL_Account__c</referenceTo>
        <relationshipLabel>Items (Future Income Account)</relationshipLabel>
        <relationshipName>Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Hide_In_Join__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hide In Join</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>International_Shipping_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>International Shipping Item</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>$Source.OrderApi__Item_Class__c</field>
                <operation>equals</operation>
                <value>a111I0000022dBxQAI</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>OrderApi__Item__c</referenceTo>
        <relationshipLabel>Shipping Items</relationshipLabel>
        <relationshipName>Shipping_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Is_Active_Membership_Type__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Active Membership Type?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Complimentary__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Defines complimentary items to apply split revenue</description>
        <label>Is Complimentary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Optional_Item__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Defines if the item will display during the JP and Dues renewal as an optional item to purchase.</inlineHelpText>
        <label>Is Optional Item</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Journal_Location_URL__c</fullName>
        <description>Open access journal URL</description>
        <label>Journal Location URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Managed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is item type managed or unmanaged</description>
        <label>Managed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__AR_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Identifies the GL Account used for A/R transactions.</description>
        <inlineHelpText>Identifies the GL Account used for A/R transactions.</inlineHelpText>
        <label>A/R Account</label>
        <referenceTo>OrderApi__GL_Account__c</referenceTo>
        <relationshipLabel>Items (A/R Account)</relationshipLabel>
        <relationshipName>Items_AR_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Adjustment_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The debit account to use when posting invoice adjustments to invoices that have already posted to A/R.</description>
        <inlineHelpText>The debit account to use when posting invoice adjustments to invoices that have already posted to A/R.</inlineHelpText>
        <label>Adjustment Account</label>
        <referenceTo>OrderApi__GL_Account__c</referenceTo>
        <relationshipLabel>Items (Sales Adjustment Accounts)</relationshipLabel>
        <relationshipName>Items2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Assign_to_Item__c</fullName>
        <defaultValue>false</defaultValue>
        <description>** System Calculated Override ** Derived from parent Item Class.</description>
        <inlineHelpText>** System Calculated Override ** Derived from parent Item Class.</inlineHelpText>
        <label>Assign to Item</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Assignment_Badge_Types_CSV__c</fullName>
        <description>SYSTEM</description>
        <inlineHelpText>SYSTEM</inlineHelpText>
        <label>SYSTEM</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__Assignment_SObject__c</fullName>
        <description>** System Calculated ** The API name of the custom object to create when a &quot;Assignable&quot; Item is purchased. Automatically calculated from the &quot;Assignment SObject&quot; field on the parent Item Class.</description>
        <inlineHelpText>** System Calculated ** The API name of the custom object to create when a &quot;Assignable&quot; Item is purchased. Automatically calculated from the &quot;Assignment SObject&quot; field on the parent Item Class.</inlineHelpText>
        <label>Assignment SObject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__Assignments_Display_Label__c</fullName>
        <description>The label to display in the wizard for the step related to assigning people to a subscription.</description>
        <inlineHelpText>The label to display in the wizard for the step related to assigning people to a subscription.</inlineHelpText>
        <label>Assignments Display Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__Business_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Items can be related to Business Groups to separate business lines and/or legal entities on transactional (sales) and financial reports.</description>
        <inlineHelpText>Items can be related to Business Groups to separate business lines and/or legal entities on transactional (sales) and financial reports.</inlineHelpText>
        <label>Business Group</label>
        <referenceTo>OrderApi__Business_Group__c</referenceTo>
        <relationshipLabel>Items</relationshipLabel>
        <relationshipName>Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Cost__c</fullName>
        <description>The cost per unit for the item.</description>
        <inlineHelpText>The cost per unit for the item.</inlineHelpText>
        <label>Item Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OrderApi__Defer_Revenue__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, the deferred revenue recognition rules will be considered when posting transactions.</description>
        <inlineHelpText>When checked, the deferred revenue recognition rules will be considered when posting transactions.</inlineHelpText>
        <label>Defer Revenue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Deferred_Revenue_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Deferred Revenue Account</label>
        <referenceTo>OrderApi__GL_Account__c</referenceTo>
        <relationshipLabel>Items (Deferred Revenue Account)</relationshipLabel>
        <relationshipName>Items1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Deferred_Revenue_Term__c</fullName>
        <label>Deferred Revenue Term (In Months)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OrderApi__Description__c</fullName>
        <description>Product description.</description>
        <inlineHelpText>Product description.</inlineHelpText>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OrderApi__Disable_Price_Rules__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked the system will not create Price Rules for the Item and will not attempt to auto-calculate the price for the Item when it is added to a Sales Order, Invoice, or Receipt. Default unchecked.</description>
        <inlineHelpText>When checked the system will not create Price Rules for the Item and will not attempt to auto-calculate the price for the Item when it is added to a Sales Order, Invoice, or Receipt. Default unchecked.</inlineHelpText>
        <label>Disable Price Rules</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Disable_Scheduling__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Disables scheduling when you buy this item</description>
        <inlineHelpText>Disables scheduling when you buy this item</inlineHelpText>
        <label>Disable Scheduling</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Discount_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The account to debit when discounting a sale related to the Item.</description>
        <inlineHelpText>The account to debit when discounting a sale related to the Item.</inlineHelpText>
        <label>Discount Account</label>
        <referenceTo>OrderApi__GL_Account__c</referenceTo>
        <relationshipLabel>Items (Discount Account)</relationshipLabel>
        <relationshipName>Discount_Account_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Display_Name__c</fullName>
        <description>** System Calculated Override ** The name of the Item as you would like it to display when published to customers. Defaults to the same value of the &quot;Item Name&quot; field.</description>
        <inlineHelpText>** System Calculated Override ** The name of the Item as you would like it to display when published to customers. Defaults to the same value of the &quot;Item Name&quot; field.</inlineHelpText>
        <label>Display Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__Download_File_Location__c</fullName>
        <description>** Conditionally Required ** Reference to the file location related to this downloadable item</description>
        <inlineHelpText>** Conditionally Required ** Reference to the file location related to this downloadable item</inlineHelpText>
        <label>Download File Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__Download_File_Name__c</fullName>
        <description>** Conditionally Required ** Defines to the file name of related to this downloadable item</description>
        <inlineHelpText>** Conditionally Required ** Defines to the file name of related to this downloadable item</inlineHelpText>
        <label>Download File Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__Download_File_Type__c</fullName>
        <description>** Conditionally Required ** Reference to the file type, related to this downloadable item.</description>
        <inlineHelpText>** Conditionally Required ** Reference to the file type, related to this downloadable item.</inlineHelpText>
        <label>Download File Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>avi</fullName>
                </value>
                <value>
                    <fullName>bmp</fullName>
                </value>
                <value>
                    <fullName>csv</fullName>
                </value>
                <value>
                    <fullName>doc</fullName>
                </value>
                <value>
                    <fullName>docx</fullName>
                </value>
                <value>
                    <fullName>flv</fullName>
                </value>
                <value>
                    <fullName>gif</fullName>
                </value>
                <value>
                    <fullName>jpg</fullName>
                </value>
                <value>
                    <fullName>log</fullName>
                </value>
                <value>
                    <fullName>mp4</fullName>
                </value>
                <value>
                    <fullName>mpg</fullName>
                </value>
                <value>
                    <fullName>pdf</fullName>
                </value>
                <value>
                    <fullName>png</fullName>
                </value>
                <value>
                    <fullName>psd</fullName>
                </value>
                <value>
                    <fullName>swf</fullName>
                </value>
                <value>
                    <fullName>tar</fullName>
                </value>
                <value>
                    <fullName>thm</fullName>
                </value>
                <value>
                    <fullName>tif</fullName>
                </value>
                <value>
                    <fullName>txt</fullName>
                </value>
                <value>
                    <fullName>wmv</fullName>
                </value>
                <value>
                    <fullName>xl</fullName>
                </value>
                <value>
                    <fullName>xls</fullName>
                </value>
                <value>
                    <fullName>xlsx</fullName>
                </value>
                <value>
                    <fullName>xml</fullName>
                </value>
                <value>
                    <fullName>zip</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OrderApi__EAN__c</fullName>
        <description>An EAN (European Article Number) is a unique 13-digit Global Trade Item Number for identifying non-book products in Europe.</description>
        <inlineHelpText>An EAN (European Article Number) is a bar code symbology consisting of a unique 13-digit Global Trade Item Number for identifying non-book products in Europe.</inlineHelpText>
        <label>EAN</label>
        <length>13</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__Enable_Access_Permissions__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, the Item will only be made available to purchase when the purchasing Contact or Account meets the criteria set in the &quot;Access Permissions&quot; related list. Unchecked by default.</description>
        <inlineHelpText>When checked, the Item will only be made available to purchase when the purchasing Contact or Account meets the criteria set in the &quot;Access Permissions&quot; related list. Unchecked by default.</inlineHelpText>
        <label>Enable Access Permissions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Enable_Assignments__c</fullName>
        <defaultValue>false</defaultValue>
        <description>** System Calculated ** When checked, the Item can be assigned to Contacts indicating benefit or ownership over goods and services. Automatically calculated based on the parent Item Class &quot;Type&quot;.</description>
        <inlineHelpText>** System Calculated ** When checked, the Item can be assigned to Contacts indicating benefit or ownership over goods and services. Automatically calculated based on the parent Item Class &quot;Type&quot;.</inlineHelpText>
        <label>Enable Assignments</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Enable_Shipping__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enables the shipping for related item</description>
        <inlineHelpText>Once this checkbox is checked, system will look for the apporiate shipping rate to apply.</inlineHelpText>
        <label>Enable Shipping</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Features_List__c</fullName>
        <description>Enter a list of features for display. Each feature should be separated by a line break</description>
        <inlineHelpText>Enter a list of features for display. Each feature should be separated by a line break</inlineHelpText>
        <label>Features List</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OrderApi__Flex_Day_of_the_Month__c</fullName>
        <label>Flex Day of the Month</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OrderApi__Form__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Link to related item interview form.</description>
        <inlineHelpText>Link to related item interview form.</inlineHelpText>
        <label>Interview Form</label>
        <referenceTo>PagesApi__Form__c</referenceTo>
        <relationshipLabel>Items</relationshipLabel>
        <relationshipName>Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__ISBN__c</fullName>
        <description>An ISBN (International Standard Book Number) is a unique 10 or 13-digit Global Trade Item Number used to identify books and publications.</description>
        <inlineHelpText>An ISBN (International Standard Book Number) is a unique 10 or 13-digit Global Trade Item Number used to identify books and publications.</inlineHelpText>
        <label>ISBN</label>
        <length>13</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__Image_Path__c</fullName>
        <defaultValue>&quot;https://package-assets.s3.amazonaws.com/master/emerald/img/placeholders/item.png&quot;</defaultValue>
        <description>URL path of the image you want to display for this item</description>
        <inlineHelpText>URL path of the image you want to display for this item</inlineHelpText>
        <label>Image URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__Income_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The credit account to use when posting revenue in a A/R transaction.</description>
        <inlineHelpText>The credit account to use when posting revenue in a A/R transaction.</inlineHelpText>
        <label>Income Account</label>
        <referenceTo>OrderApi__GL_Account__c</referenceTo>
        <relationshipLabel>Items (Income Account)</relationshipLabel>
        <relationshipName>Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Interview_Form_Display_Label__c</fullName>
        <description>The label to display in the wizard for the step related to completing the interview form questions.</description>
        <inlineHelpText>The label to display in the wizard for the step related to completing the interview form questions.</inlineHelpText>
        <label>Interview Form Display Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__Invoice_Payment_Priority__c</fullName>
        <description>If populated, this field is used to identify the order in which partial payments are applied to an invoice.</description>
        <inlineHelpText>If populated, this field is used to identify the order in which partial payments are applied to an invoice.</inlineHelpText>
        <label>Payment Priority</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OrderApi__Is_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, the Item is considered available for sale and will be made available for selection against Invoice, Sales Order, Receipt, and EPayment Lines. Defaults checked.</description>
        <inlineHelpText>When checked, the Item is considered available for sale and will be made available for selection against Invoice, Sales Order, Receipt, and EPayment Lines. Defaults checked.</inlineHelpText>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Is_Contribution__c</fullName>
        <defaultValue>false</defaultValue>
        <description>** System Calculated Override ** Enable contribution (donation) related controls and features for this Item. Defaults to the value of the same field on the Item&apos;s related Item Class.</description>
        <inlineHelpText>** System Calculated Override ** Enable contribution (donation) related controls and features for this Item. Defaults to the value of the same field on the Item&apos;s related Item Class.</inlineHelpText>
        <label>Is Contribution</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Is_Default_Shipping_Rate__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox to make this the Default Shipping Rate.</description>
        <inlineHelpText>Select the checkbox to make this the Default Shipping Rate. This default is used when there is no other applicable rate for an item that requires shipping.</inlineHelpText>
        <label>Is Default Shipping Rate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Is_Default_Tax_Rate__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Select this checkbox when using the same tax rate for items regardless of the purchaser&apos;s locale.</description>
        <inlineHelpText>Select this checkbox when using the same tax rate for items regardless of the purchaser&apos;s locale.</inlineHelpText>
        <label>Is Default Tax Rate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Is_Downloadable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>** System Calculated Override ** Enable downloadable specific controls and features for this Item. Defaults to the value of the same field on the Item&apos;s related Item Class.</description>
        <inlineHelpText>** System Calculated Override ** Enable downloadable specific controls and features for this Item. Defaults to the value of the same field on the Item&apos;s related Item Class.</inlineHelpText>
        <label>Is Downloadable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Is_Event__c</fullName>
        <defaultValue>false</defaultValue>
        <description>** System Calculated Override ** Enable event specific controls and features for this Item. Defaults to the value of the same field on the Item&apos;s related Item Class.</description>
        <inlineHelpText>** System Calculated Override ** Enable event specific controls and features for this Item. Defaults to the value of the same field on the Item&apos;s related Item Class.</inlineHelpText>
        <label>Is Event</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Is_Inventoried__c</fullName>
        <defaultValue>false</defaultValue>
        <description>** System Calculated Override ** Enable Inventoried specific controls and features for this Item. Defaults to the value of the same field on the Item&apos;s related Item Class.</description>
        <inlineHelpText>** System Calculated Override ** Enable Inventoried specific controls and features for this Item. Defaults to the value of the same field on the Item&apos;s related Item Class.</inlineHelpText>
        <label>Is Inventoried</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Is_Publication__c</fullName>
        <defaultValue>false</defaultValue>
        <description>** System Calculated Override ** Enable publication specific controls and features for this Item. Defaults to the value of the same field on the Item&apos;s related Item Class.</description>
        <inlineHelpText>** System Calculated Override ** Enable publication specific controls and features for this Item. Defaults to the value of the same field on the Item&apos;s related Item Class.</inlineHelpText>
        <label>Is Publication</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Is_Service__c</fullName>
        <defaultValue>false</defaultValue>
        <description>** System Calculated Override ** Enable service specific controls and features for this Item. Defaults to the value of the same field on the Item&apos;s related Item Class.</description>
        <inlineHelpText>** System Calculated Override ** Enable service specific controls and features for this Item. Defaults to the value of the same field on the Item&apos;s related Item Class.</inlineHelpText>
        <label>Is Service</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Is_Shipping_Rate__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox to create a Shipping Rate.</description>
        <inlineHelpText>Select the checkbox to create a Shipping Rate.</inlineHelpText>
        <label>Is Shipping Rate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Is_Subscription__c</fullName>
        <defaultValue>false</defaultValue>
        <description>** System Calculated Override ** Enable Subscription specific controls and features for this Item. Defaults to the value of the same field on the Item&apos;s related Item Class.</description>
        <inlineHelpText>** System Calculated Override ** Enable Subscription specific controls and features for this Item. Defaults to the value of the same field on the Item&apos;s related Item Class.</inlineHelpText>
        <label>Is Subscription</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Is_Tax_Deductible__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check if the item is a tax deductible donation. The cost per unit will drive the tax deductible amount on the sales order.</description>
        <inlineHelpText>Check if the item is a tax deductible donation. The cost per unit will drive the tax deductible amount on the sales order.</inlineHelpText>
        <label>Is Tax Deductible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Is_Tax__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Identifies the Item to be used as a taxes rate to be applied to taxable items.</description>
        <inlineHelpText>Identifies the Item to be used as a taxes rate to be applied to taxable items.</inlineHelpText>
        <label>Is Tax</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Is_Taxable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>** System Calculated Override ** Enable tax specific controls and features for this Item. Defaults to the value of the same field on the Item&apos;s related Item Class.</description>
        <inlineHelpText>** System Calculated Override ** Enable tax specific controls and features for this Item. Defaults to the value of the same field on the Item&apos;s related Item Class.</inlineHelpText>
        <label>Is Taxable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Item_Class__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>** Required ** Link to related Item Class</description>
        <inlineHelpText>** Required ** Link to related Item Class</inlineHelpText>
        <label>Item Class</label>
        <referenceTo>OrderApi__Item_Class__c</referenceTo>
        <relationshipLabel>Items</relationshipLabel>
        <relationshipName>Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Item_Weight_UOM__c</fullName>
        <description>** Conditionally Required ** The UOM (Unit of Measure) used to calculate the value of the &quot;Item Weight&quot; field. Required when &quot;Requires Shipping&quot; is checked.</description>
        <inlineHelpText>** Conditionally Required ** The UOM (Unit of Measure) used to calculate the value of the &quot;Item Weight&quot; field. Required when &quot;Requires Shipping&quot; is checked.</inlineHelpText>
        <label>Item Weight UOM</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Gram</fullName>
                </value>
                <value>
                    <fullName>Kilogram</fullName>
                </value>
                <value>
                    <fullName>Milligram</fullName>
                </value>
                <value>
                    <fullName>Ounce</fullName>
                </value>
                <value>
                    <fullName>Pound</fullName>
                </value>
                <value>
                    <fullName>License</fullName>
                </value>
                <value>
                    <fullName>Subscriber</fullName>
                </value>
                <value>
                    <fullName>Member</fullName>
                </value>
                <value>
                    <fullName>Ticket</fullName>
                </value>
                <value>
                    <fullName>Seat</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>